--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,8 @@
 </head>
 
 <body>
+	<footer>
+		<a href="https://hacktoberfest.digitalocean.com"><img src="https://i.ibb.co/2szrk4x/Sponsors-Dark.png" alt="Sponsors-Dark" border="0"></a>
+	</footer>
 </body>
 </html>
